# sdvrp-py

./: Cargo.toml  README.md  draft.py  pyproject.toml
.github/workflows/: CI.yml
src/sdvrp_py/: __init__.py
