[project]
name = "sdvrp-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HellOwhatAs", email = "xjq701229@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "elkai>=2.0.1",
    "matplotlib>=3.10.5",
    "tqdm>=4.67.1",
]

[tool.maturin]
module-name = "sdvrp_py._core"
python-packages = ["sdvrp_py"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
